--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     
         <h1>Willkommen auf meiner Homepage</h1>
         <p>Mein Name ist Christopher Janietz!</p>
-        
+        <form>
+            Dein Name:<br>
+            <input type="text"><br>
+            Dein Anliegen<br>
+            <textarea></textarea><br>
+            <input type="submit" value="Abschicken">
+        </form>
     </body>
 </html>
