--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
         <h1>Willkommen auf meiner Homepage</h1>
         <p>Mein Name ist Christopher Janietz!</p>
+        <p>Kontaktieren Sie mich unter: christopher@j..eu</p>
         
     </body>
 </html>
